Fix horizontal scrolling whitespace

--- a/frontend/src/components/FormPage.scss
+++ b/frontend/src/components/FormPage.scss
@@ -71,10 +71,6 @@
     width: 8em;
   }
 
-  .full-width input {
-    width: 100%;
-  }
-
   .half-width input {
     width: 30%;
   }
